Layout: Second improvements - home layout, CSS overrides

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
   <!-- Right Content - All Posts List -->
   <main class="right-content">
     <div class="posts-list">
-      <h2>📚 All Posts</h2>
+      <h2>Posts</h2>
       <ul class="post-list">
         {%- for post in site.posts -%}
         <li>
