--- a/css/override.css
+++ b/css/override.css
@@ -131,6 +131,11 @@ hr {
   line-height: 1.4;
 }
 
+.post .post-title {
+  font-size: 2.75rem;
+  line-height: 1.3;
+}
+
 .post-title a {
   color: #292929;
   text-decoration: none;
